<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".NeedHelpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <android.support.v7.widget.CardView
                android:id="@+id/accomodation_card_need"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/unchecked_toggle"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/accommodation"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorFont"
                        android:textAlignment="center"/>

                    <EditText
                        android:id="@+id/accomodation_card_edittext_need"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="100dp"
                        android:layout_margin="8dp"
                        android:padding="8dp"
                        android:hint="@string/reason"
                        android:gravity="top"
                        android:background="@color/colorFontDark"
                        android:visibility="gone"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/food_card_need"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/unchecked_toggle"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/food"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorFont"
                        android:textAlignment="center"/>

                    <EditText
                        android:id="@+id/food_card_edittext_need"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="100dp"
                        android:layout_margin="8dp"
                        android:padding="8dp"
                        android:hint="@string/reason"
                        android:gravity="top"
                        android:background="@color/colorFontDark"
                        android:visibility="gone"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/clothes_card_need"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/unchecked_toggle"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/clothes"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorFont"
                        android:textAlignment="center"/>

                    <EditText
                        android:id="@+id/clothes_card_edittext_need"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="100dp"
                        android:layout_margin="8dp"
                        android:padding="8dp"
                        android:hint="@string/reason"
                        android:gravity="top"
                        android:background="@color/colorFontDark"
                        android:visibility="gone"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/medicine_card_need"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/unchecked_toggle"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/medicine"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorFont"
                        android:textAlignment="center"/>

                    <EditText
                        android:id="@+id/medicine_card_edittext_need"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="100dp"
                        android:layout_margin="8dp"
                        android:layout_gravity="top|start"
                        android:padding="8dp"
                        android:hint="@string/reason"
                        android:gravity="top"
                        android:background="@color/colorFontDark"
                        android:visibility="gone"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/volunteer_card_need"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/unchecked_toggle"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/volunteer_need"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorFont"
                        android:textAlignment="center"/>

                    <EditText
                        android:id="@+id/volunteer_card_edittext_need"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="100dp"
                        android:layout_margin="8dp"
                        android:padding="8dp"
                        android:hint="@string/reason"
                        android:gravity="top"
                        android:background="@color/colorFontDark"
                        android:visibility="gone"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/other_card_need"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/unchecked_toggle"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/other"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorFont"
                        android:textAlignment="center"/>

                    <EditText
                        android:id="@+id/other_card_edittext_need"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="100dp"
                        android:layout_margin="8dp"
                        android:padding="8dp"
                        android:hint="@string/reason"
                        android:gravity="top"
                        android:background="@color/colorFontDark"
                        android:visibility="gone"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/submit_need_help"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/submit"
        android:textSize="@dimen/categories_text_size"
        android:textColor="@color/colorFont"
        android:background="@color/colorNuhGreen"/>

</LinearLayout>